# Global_Flutter_Project

flutterglobalyc/: README.md  analysis_options.yaml  pubspec.yaml
flutterglobalyc/android/app/: build.gradle
flutterglobalyc/ios/Runner/: Info.plist
flutterglobalyc/ios/Runner.xcodeproj/: project.pbxproj
flutterglobalyc/lib/: DataBaseTextHelper.dart  DatabaseHelper.dart  DatabaseHelperUpdate.dart  HomePage.dart  SerialPortManager.dart  main.dart  t.dart
flutterglobalyc/lib/ActiveDevices/: ActiveDevicesPage.dart  DeviceInfoPage.dart  PersonalCodeCheck.dart  PersonalCodePage.dart  WifiPage.dart
flutterglobalyc/lib/HomePage/: Nawbar.dart  test.dart
flutterglobalyc/lib/HomePage/Calendar/: Calendar.dart
flutterglobalyc/lib/HomePage/Educations/: Educations.dart
flutterglobalyc/lib/ManufacturingMode/: MmodeLogin.dart  MmodeSDevice.dart
flutterglobalyc/lib/TestMode/: TestModeNawbar.dart
flutterglobalyc/lib/Update/: SoftwareUpdate.dart  UpdateNawbar.dart
flutterglobalyc/linux/: CMakeLists.txt  my_application.cc
flutterglobalyc/macos/Runner.xcodeproj/: project.pbxproj
flutterglobalyc/serialport/: .metadata  README.md  ffigen.yaml  pubspec.yaml
flutterglobalyc/serialport/android/: build.gradle  settings.gradle
flutterglobalyc/serialport/lib/: serialport.dart  serialport_bindings_generated.dart
flutterglobalyc/serialport/src/: CMakeLists.txt  SerialPort.c  SerialPort.h
flutterglobalyc/web/: index.html  manifest.json
flutterglobalyc/windows/: CMakeLists.txt
flutterglobalyc/windows/runner/: Runner.rc  main.cpp
testupdate/: testupdate.ino
(+44 files in other folders)
